# python-task

./: README.md
src/: Dockerfile  Makefile  check_salary.py  main.py  pyproject.toml  request.py  test.py  token.txt  users.csv
