[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["kerenhor <kerenhor@student.21-school.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
requests = "^2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
